# utci

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  tests.yml
examples/: example.py
src/utci/: __init__.py  _version.py  utci.py
tests/: __init__.py  test_utci.py  verify_accuracy.py
